# zroc

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  meson.build  zroc.pc.in
docs/docbook/: CMakeCCompilerId_8c.xml  annotated.xml  base__types_8h.xml  base__types_8h_source.xml  dir_196bada0f2aacef65af860dadf14f238.xml  dir_1cf3b639bdab0853580008de6ba8ea74.xml  dir_2241064965c8d9ca993f08b926076f7d.xml  dir_4fef79e7177ba769987a8da36c892c5f.xml  dir_5359452794771cd9a0793a2e746361ed.xml  dir_59425e443f801f1f2fd8bbe4959a3ccf.xml  dir_5c04afa695857b92bebcb9cac0d46f36.xml  dir_63772b626f2709090f0bdca0f40827b4.xml  dir_68267d1309a1af8e8297ef4c3efbcdba.xml  dir_70feb687ec7d86273f84dd943972cbcc.xml  dir_721865ac18f5179cf2211d1b67312542.xml  dir_94d7edf6f8f3d9af5fd63c44172da41c.xml  dir_acc2056b73c4fda97caebb7ceca7df66.xml  dir_d44c64559bbebec7f509842c48db8b23.xml  dir_ecbd93957393734f479c855a032a94b1.xml  index.xml  md_README.xml  structZrocErr.xml  structZrocLogger.xml  test__error_8c.xml  test__log_8c.xml  zroc_8h.xml  zroc_8h_source.xml  zroc__bits_8h.xml  zroc__bits_8h_source.xml  zroc__error_8c.xml  zroc__error_8h.xml  zroc__error_8h_source.xml  zroc__log_8c.xml  zroc__log_8h.xml  zroc__log_8h_source.xml  zroc__mem__sizes_8h.xml  zroc__mem__sizes_8h_source.xml  zroc__memory_8c.xml  zroc__memory_8h.xml  zroc__memory_8h_source.xml
docs/html/: CMakeCCompilerId_8c.html  README_8md.html  annotated.html  annotated_dup.js  base__types_8h.html  base__types_8h.js  base__types_8h_source.html  classes.html  dir_196bada0f2aacef65af860dadf14f238.html  dir_196bada0f2aacef65af860dadf14f238.js  doxygen_crawl.html  (+72 more)
include/: zroc.h
src/: zroc.c
test/: zroc_testing.c  zroc_testing.h
tests/: test_error.c  test_memory.c
(+184 files in other folders)
